--- a/public/index.html
+++ b/public/index.html
@@ -122,6 +122,6 @@
 <div id="errorMessage"></div>
 
 <!-- Reference to the bundled script -->
-<script src="dist/bundle.js"></script>
+<script src="../dist/bundle.js"></script>
 </body>
 </html>
